logs/enamlx.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/QtPy-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/atom'...
Listing './lib/python3.5/site-packages/atom/datastructures'...
Listing './lib/python3.5/site-packages/atom-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/enaml'...
Listing './lib/python3.5/site-packages/enaml/applib'...
Listing './lib/python3.5/site-packages/enaml/core'...
Listing './lib/python3.5/site-packages/enaml/core/byteplay'...
Compiling './lib/python3.5/site-packages/enaml/core/byteplay/byteplay2.py'...
***   File "./lib/python3.5/site-packages/enaml/core/byteplay/byteplay2.py", line 183
    raise ValueError, "Opcode stack behaviour depends on arg"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enaml/core/parser'...
Listing './lib/python3.5/site-packages/enaml/core/parser/parse_tab'...
Listing './lib/python3.5/site-packages/enaml/layout'...
Listing './lib/python3.5/site-packages/enaml/qt'...
Listing './lib/python3.5/site-packages/enaml/qt/docking'...
Listing './lib/python3.5/site-packages/enaml/qt/docking/dock_images'...
Listing './lib/python3.5/site-packages/enaml/scintilla'...
Listing './lib/python3.5/site-packages/enaml/stdlib'...
Listing './lib/python3.5/site-packages/enaml/widgets'...
Listing './lib/python3.5/site-packages/enaml/workbench'...
Listing './lib/python3.5/site-packages/enaml/workbench/core'...
Listing './lib/python3.5/site-packages/enaml/workbench/ui'...
Listing './lib/python3.5/site-packages/enaml-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/enamlx'...
Listing './lib/python3.5/site-packages/enamlx/core'...
Listing './lib/python3.5/site-packages/enamlx/qt'...
Compiling './lib/python3.5/site-packages/enamlx/qt/qt_occ_viewer.py'...
***   File "./lib/python3.5/site-packages/enamlx/qt/qt_occ_viewer.py", line 561
    print "shape {} not in {}".format(shape,self._displayed_shapes)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enamlx/widgets'...
Listing './lib/python3.5/site-packages/enamlx-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/kiwisolver-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/qtpy'...
Listing './lib/python3.5/site-packages/qtpy/_patch'...
Listing './lib/python3.5/site-packages/qtpy/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
